--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,33 @@
 version: "3.4"
 services:
-  vpn:
-    container_name: vpn
-    image: dperson/openvpn-client:latest
-    cap_add:
-      - net_admin # required to modify network interfaces
-    restart: unless-stopped
-    volumes:
-      - /dev/net:/dev/net:z # tun device
-      - ${ROOT}/config/vpn:/vpn # OpenVPN configuration
-    security_opt:
-      - label:disable
-    ports:
-      - 8112:8112 # port for deluge web UI to be reachable from local network
-    command: '-f "" -r 192.168.1.0/24' # enable firewall and route local network traffic
-
+  #  vpn:
+  #    container_name: vpn
+  #    image: dperson/openvpn-client:latest
+  #    cap_add:
+  #      - net_admin # required to modify network interfaces
+  #    restart: unless-stopped
+  #    volumes:
+  #      - /dev/net:/dev/net:z # tun device
+  #      - ${ROOT}/config/vpn:/vpn # OpenVPN configuration
+  #    security_opt:
+  #      - label:disable
+  #    ports:
+  #      - 8112:8112 # port for deluge web UI to be reachable from local network
+  #    command: '-f "" -r 192.168.1.0/24' # enable firewall and route local network traffic
+  #
   deluge:
     container_name: deluge
     image: linuxserver/deluge:latest
     restart: unless-stopped
-    network_mode: service:vpn # run on the vpn network
+    networks:
+      - redonda
     environment:
       - PUID=${PUID} # default user id, defined in .env
       - PGID=${PGID} # default group id, defined in .env
       - TZ=${TZ} # timezone, defined in .env
+      - DELUGE_LOGLEVEL=debug
+    ports:
+      - "8112:8112"
     volumes:
       - ${ROOT}/downloads:/downloads # downloads folder
       - ${ROOT}/config/deluge:/config # config files
@@ -32,11 +36,14 @@ services:
     container_name: jackett
     image: linuxserver/jackett:latest
     restart: unless-stopped
-    network_mode: host
+    networks:
+      - redonda
     environment:
       - PUID=${PUID} # default user id, defined in .env
       - PGID=${PGID} # default group id, defined in .env
       - TZ=${TZ} # timezone, defined in .env
+    ports:
+      - "9117:9117"
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${ROOT}/downloads/torrent-blackhole:/downloads # place where to put .torrent files for manual download
@@ -46,11 +53,14 @@ services:
     container_name: nzbget
     image: linuxserver/nzbget:latest
     restart: unless-stopped
-    network_mode: host
+    networks:
+      - redonda
     environment:
       - PUID=${PUID} # default user id, defined in .env
       - PGID=${PGID} # default group id, defined in .env
       - TZ=${TZ} # timezone, defined in .env
+    ports:
+      - "6789:6789"
     volumes:
       - ${ROOT}/downloads:/downloads # download folder
       - ${ROOT}/config/nzbget:/config # config files
@@ -59,7 +69,10 @@ services:
     container_name: sonarr
     image: linuxserver/sonarr:latest
     restart: unless-stopped
-    network_mode: host
+    networks:
+      - redonda
+    ports:
+      - "8989:8989"
     environment:
       - PUID=${PUID} # default user id, defined in .env
       - PGID=${PGID} # default group id, defined in .env
@@ -74,7 +87,10 @@ services:
     container_name: radarr
     image: linuxserver/radarr:latest
     restart: unless-stopped
-    network_mode: host
+    networks:
+      - redonda
+    ports:
+      - "7878:7878"
     environment:
       - PUID=${PUID} # default user id, defined in .env
       - PGID=${PGID} # default group id, defined in .env
@@ -87,11 +103,15 @@ services:
 
   plex-server:
     container_name: plex-server
-    image: plexinc/pms-docker:latest
+      #image: plexinc/pms-docker:latest
+    image: linuxserver/plex:latest
     restart: unless-stopped
     environment:
       - TZ=${TZ} # timezone, defined in .env
-    network_mode: host
+    networks:
+      - redonda
+    ports:
+      - "32400:32400"
     volumes:
       - ${ROOT}/config/plex/db:/config # plex database
       - ${ROOT}/config/plex/transcode:/transcode # temp transcoded files
@@ -101,7 +121,8 @@ services:
     container_name: bazarr
     image: linuxserver/bazarr
     restart: unless-stopped
-    network_mode: host
+    networks:
+      - redonda
     environment:
       - PUID=${PUID} # default user id, defined in .env
       - PGID=${PGID} # default group id, defined in .env
@@ -113,3 +134,7 @@ services:
       - ${ROOT}/complete/tv:/tv # tv shows folder
     ports:
       - 6767:6767
+
+networks:
+  redonda:
+    driver: bridge
