--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,65 @@
 version: "3.4"
+
+x-logging:
+  &default-logging
+  driver: "json-file"
+  options:
+    max-size: "50m"
+    max-file: "5"
+
 services:
-  #  vpn:
-  #    container_name: vpn
-  #    image: dperson/openvpn-client:latest
-  #    cap_add:
-  #      - net_admin # required to modify network interfaces
-  #    restart: unless-stopped
-  #    volumes:
-  #      - /dev/net:/dev/net:z # tun device
-  #      - ${ROOT}/config/vpn:/vpn # OpenVPN configuration
-  #    security_opt:
-  #      - label:disable
-  #    ports:
-  #      - 8112:8112 # port for deluge web UI to be reachable from local network
-  #    command: '-f "" -r 192.168.1.0/24' # enable firewall and route local network traffic
-  #
-  deluge:
-    container_name: deluge
-    image: linuxserver/deluge:latest
+
+  npm:
+    container_name: npm
+    image: 'jc21/nginx-proxy-manager:latest'
     restart: unless-stopped
+    logging: *default-logging
+    ports:
+      - '80:80'
+      - '81:81'
+      - '443:443'
+    volumes:
+      - ${ROOT}/npm-data:/data
+      - ${ROOT}/letsencrypt:/etc/letsencrypt
+      - &resolv './resolv.conf:/etc/resolv.conf'
     networks:
       - redonda
-    environment:
-      - PUID=${PUID} # default user id, defined in .env
-      - PGID=${PGID} # default group id, defined in .env
-      - TZ=${TZ} # timezone, defined in .env
-      - DELUGE_LOGLEVEL=debug
+
+  transmission-openvpn:
+    container_name: transmission-openvpn
+    image: haugene/transmission-openvpn
+    cap_add:
+      - NET_ADMIN
+    restart: unless-stopped
+    logging: *default-logging
+    networks:
+      - redonda
     ports:
-      - "8112:8112"
+      - "9091:9091"
     volumes:
-      - ${ROOT}/downloads:/downloads # downloads folder
-      - ${ROOT}/config/deluge:/config # config files
+      - ${ROOT}/downloads:/downloads # where transmission will store the data
+      - ${ROOT}/config/transmission-vpn:/config # where transmission-home is stored
+      - *resolv
+    environment:
+      - OPENVPN_PROVIDER=NORDVPN
+      - OPENVPN_CONFIG=us_washington_dc
+      - OPENVPN_USERNAME=${VPN_USERNAME}
+      - OPENVPN_PASSWORD=${VPN_PASSWORD}
+      - LOCAL_NETWORK=192.168.1.0/24
+      - NORDVPN_COUNTRY=US
+      - OPENVPN_OPTS=--inactive 3600 --ping 10 --ping-exit 60
+      - VPN_LOG_LEVEL=11
+      - PEER_DNS=false
+      - TRANSMISSION_DOWNLOAD_DIR=/downloads/complete
+      - TRANSMISSION_INCOMPLETE_DIR=/downloads
+      - TRANSMISSION_WATCH_DIR=/downloads
+      - TRANSMISSION_WATCH_DIR_ENABLED=false
 
   jackett:
     container_name: jackett
     image: linuxserver/jackett:latest
     restart: unless-stopped
+    logging: *default-logging
     networks:
       - redonda
     environment:
@@ -48,11 +72,13 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - ${ROOT}/downloads/torrent-blackhole:/downloads # place where to put .torrent files for manual download
       - ${ROOT}/config/jackett:/config # config files
+      - './resolv.conf:/etc/resolv.conf'
 
   nzbget:
     container_name: nzbget
     image: linuxserver/nzbget:latest
     restart: unless-stopped
+    logging: *default-logging
     networks:
       - redonda
     environment:
@@ -69,6 +95,7 @@ services:
     container_name: sonarr
     image: linuxserver/sonarr:latest
     restart: unless-stopped
+    logging: *default-logging
     networks:
       - redonda
     ports:
@@ -87,6 +114,7 @@ services:
     container_name: radarr
     image: linuxserver/radarr:latest
     restart: unless-stopped
+    logging: *default-logging
     networks:
       - redonda
     ports:
@@ -100,12 +128,14 @@ services:
       - ${ROOT}/config/radarr:/config # config files
       - ${ROOT}/complete/movies:/movies # movies folder
       - ${ROOT}/downloads:/downloads # download folder
+      - './resolv.conf:/etc/resolv.conf'
 
   plex-server:
     container_name: plex-server
       #image: plexinc/pms-docker:latest
     image: linuxserver/plex:latest
     restart: unless-stopped
+    logging: *default-logging
     environment:
       - TZ=${TZ} # timezone, defined in .env
     networks:
@@ -116,11 +146,13 @@ services:
       - ${ROOT}/config/plex/db:/config # plex database
       - ${ROOT}/config/plex/transcode:/transcode # temp transcoded files
       - ${ROOT}/complete:/data # media library
+      - './resolv.conf:/etc/resolv.conf'
 
   bazarr:
     container_name: bazarr
     image: linuxserver/bazarr
     restart: unless-stopped
+    logging: *default-logging
     networks:
       - redonda
     environment:
